Mon Aug 25 09:47:19 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/OEP/Display/NavDisplayGUI_exec/RootPanel.h: Fixed a
	  compilation error by adding inclusion of "ace/Null_Mutex.h" and
	  define QT_GENUINE_STR.

Mon Aug 25 07:42:14 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tools/RTComponentServer/ComponentServer_Task.cpp:
	* tools/RTComponentServer/ComponentServer_Task.h:
	* tools/RTComponentServer/RTConfig_Manager.h: Fixed merge errors
	  by adding inclusion of "tao/ORB.h", "ace/Null_Mutex.h" and
	  such.

Sun Aug 24 22:03:55 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	  Merged the RTCIAO-0 branch into main trunk.

	Sun Aug 24 21:45:33 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

		* tools/Assembly_Deployer/Assembly_Deployer.mpc:
		* tools/Daemon/Daemon.mpc: Both CIAO_Daemon and Assembly_Manager
		  depend on RTCORBA  library now because they both required to
		  handle RTCORBA related types.

		* tools/Assembly_Deployer/Assembly_Visitors.cpp:
		* tools/Assembly_Deployer/Assembly_Visitors.h: Decoupled the
		  container creation functionality from the creation of
		  ComponentServer into a separate method.  This allows us to
		  better manage the type of container and the associating policy
		  sets.

		* tools/Assembly_Deployer/Deployment_Configuration.cpp:
		* tools/Assembly_Deployer/Deployment_Configuration.h: Changed the
		  get_activator[_ior] functions to return default activator where
		  there's no valid activator id available instead of throwing an
		  exception.

		* tools/ComponentServer/ComponentServer.cpp: Invoke the init
		  method of ComponentServer servant.  This function is now
		  supported.

		* tools/RTComponentServer/ComponentServer_Task.cpp:
		* tools/RTComponentServer/ComponentServer_Task.h:
		* tools/RTComponentServer/RTComponentServer.cpp:
		* tools/RTComponentServer/RTComponentServer.mpc:
		* tools/RTComponentServer/RTConfig_Manager.cpp:
		* tools/RTComponentServer/RTConfig_Manager.h:
		* tools/RTComponentServer/RTServer_Impl.cpp: